k8s/03-ingress.yaml
# --- API GATEWAY ---
apiVersion: apps/v1
kind: Deployment
metadata: { name: api-gateway }
spec:
  replicas: 1
  selector: { matchLabels: { app: api-gateway } }
  template:
    metadata: { labels: { app: api-gateway } }
    spec:
      containers:
        - name: api-gateway
          image: shahriar22/demo-api-gateway:latest
          imagePullPolicy: Always
          ports: [{ containerPort: 8000 }]
          resources: { requests: { memory: "64Mi" }, limits: { memory: "128Mi" } }
---
apiVersion: v1
kind: Service
metadata: { name: api-gateway }
spec:
  type: LoadBalancer
  ports: [{ port: 8000, targetPort: 8000 }]
  selector: { app: api-gateway }

# --- FRONTEND ---
---
apiVersion: apps/v1
kind: Deployment
metadata: { name: frontend }
spec:
  replicas: 1
  selector: { matchLabels: { app: frontend } }
  template:
    metadata: { labels: { app: frontend } }
    spec:
      containers:
        - name: frontend
          image: shahriar22/demo-frontend-service:latest
          imagePullPolicy: Always
          ports: [{ containerPort: 3000 }]
          resources: { requests: { memory: "128Mi" }, limits: { memory: "256Mi" } }
---
apiVersion: v1
kind: Service
metadata: { name: frontend }
spec:
  type: LoadBalancer
  ports: [{ port: 3000, targetPort: 3000 }]
  selector: { app: frontend }
